feat(kuby-frontend): add back zonejs and primeng as ui lib

--- a/kuby-frontend/src/app/app.html
+++ b/kuby-frontend/src/app/app.html
@@ -7,8 +7,10 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<button (click)="getData()">Get demo data</button>
-<button (click)="removeData()">Remove demo data</button>
+<p-button (onClick)="getData()" label="Get demo data"/>
+<p-button (onClick)="removeData()" label="Remove demo data"/>
+
+<button pButton >asd</button>
 
 <p>{{demoData | async | json}}</p>
 
