--- a/kuby-frontend/src/app/cube-icon-uploader/cube-icon-uploader.scss
+++ b/kuby-frontend/src/app/cube-icon-uploader/cube-icon-uploader.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 
 .card-body {
@@ -23,4 +25,9 @@
 .radio-button {
   display: flex;
   gap: 0.5rem;
+}
+
+.timer-container {
+  display: flex;
+  column-gap: 0.5rem;
 }
