--- a/kuby-frontend/src/app/cube-icon-uploader/cube-icon-uploader.scss
+++ b/kuby-frontend/src/app/cube-icon-uploader/cube-icon-uploader.scss
@@ -17,7 +17,6 @@
 
 .upload-button {
   display: block;
-  justify-self: end;
   margin: 1rem;
 }
 
@@ -52,4 +51,124 @@
   justify-content: flex-end;
   gap: 1rem;
   margin-top: 1rem;
+}
+
+.buttons-divider-wrapper {
+  display: flex;
+}
+
+.cube-config-editor-container {
+  display: flex;
+  align-items: flex-start;
+  gap: 2rem;
+  padding: 1rem;
+}
+
+/* LEFT BUTTON COLUMN */
+.card-selection-buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 160px;
+  flex-shrink: 0;
+}
+
+/* RIGHT SIDE (FORM) */
+.form-wrapper {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+}
+
+.cube-config-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 420px;
+  padding: 2rem;
+  gap: 2rem;
+  border-radius: var(--p-button-border-radius);
+  background-color: var(--p-content-background);
+}
+
+.cube-config-form > img {
+  max-width: 240px;
+}
+
+.form-body {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.file-buttons-add-remove-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+// drawer
+.drawer-image {
+  display: flex;
+  justify-self: center;
+  width: 120px;
+  height: 120px;
+}
+
+// 3D Cube
+.cube-container {
+  perspective: 800px;
+  width: 200px;
+  height: 200px;
+  margin: 80px;
+}
+
+.cube {
+  width: 200px;
+  height: 200px;
+  position: relative;
+  transform-style: preserve-3d;
+  animation: rotate 8s infinite linear;
+}
+
+.face {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+}
+
+.face img,
+.face h3 {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.front {
+  transform: translateZ(100px);
+}
+.back {
+  transform: rotateY(180deg) translateZ(100px);
+}
+.right {
+  transform: rotateY(90deg) translateZ(100px);
+}
+.left {
+  transform: rotateY(-90deg) translateZ(100px);
+}
+.top {
+  transform: rotateX(90deg) translateZ(100px);
+}
+.bottom {
+  transform: rotateX(-90deg) translateZ(100px);
+}
+
+@keyframes rotate {
+  from {
+    transform: rotateX(0deg) rotateY(0deg);
+  }
+  to {
+    transform: rotateX(360deg) rotateY(360deg);
+  }
 }
